Details
-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 4.6.0-beta1
-
Windows 10 x64
-
13b0106dcd163ce66bfff1947bcf6d61859f8d02 (qt-creator/qt-creator/master)
Description
Summary:
Using "Edit files" for custom imported project resets its filter settings on each opening.
Steps to reproduce:
- Click New Project
- Choose Import Project -> Import Existing Project
- Load a custom project, i.e. with empty main.cpp and empty makefile.mk.
- Click in the Projects pane on the project name, then "Edit files"
- In the field "Show files matching" add "*.mk" and click "Apply filter"
- Check the makefile.mk and click "Ok"
- In a file explorer add makefile2.mk to your project directory.
- Open "Edit files" again
Expected result:
"Edit files" should have the same filter as last used in this project.
Actual result:
"Edit files" filters have been reset to default ones and require adding "*.mk" manually again.
Attachments
For Gerrit Dashboard: QTCREATORBUG-19781 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
250640,2 | ProjectExplorer: Add history completion ability to SelectableFilesWidget | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |