ProjectExplorer: Add history completion ability to SelectableFilesWidget

... and make use of it in project contexts.

Fixes: QTCREATORBUG-19781
Change-Id: I4618b6e4a64b1aaa1352afcc98e4cc6e5fac1859
Reviewed-by: hjk <hjk@qt.io>