src/plugins/genericprojectmanager/filesselectionwizardpage.cpp
@@ -29,6 +29,7 @@
 #include "genericprojectconstants.h"
 
 #include <coreplugin/icore.h>
+#include <projectexplorer/projectexplorerconstants.h>
 #include <projectexplorer/selectablefilesmodel.h>
 
 #include <utils/wizard.h>
@@ -47,6 +48,8 @@ FilesSelectionWizardPage::FilesSelectionWizardPage(GenericProjectWizardDialog *g
     auto layout = new QVBoxLayout(this);
 
     layout->addWidget(m_filesWidget);
+    m_filesWidget->enableFilterHistoryCompletion
+            (ProjectExplorer::Constants::ADD_FILES_DIALOG_FILTER_HISTORY_KEY);
     m_filesWidget->setBaseDirEditable(false);
     connect(m_filesWidget, &ProjectExplorer::SelectableFilesWidget::selectedFilesChanged,
             this, &FilesSelectionWizardPage::completeChanged);
